tests/functions/errors/no_main.c.res
[1m[31mNo main function found
[0m